Fix footer alignment and add some styling to the renderd notes.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: 100%;
+  overflow: auto;
 }
 
 a {
@@ -11,6 +18,10 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 20%;
+  width: 100%;
+  padding: 3% 2%;
+  margin-bottom: 50px;
 }
 
 .login {
@@ -29,10 +40,10 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 10vh;
   border: 1px solid black;
   height: 80%;
   width: 95%;
-  margin: 0 auto;
 }
 
 .content-header {
@@ -93,6 +104,13 @@ form button {
   transform: rotate(90deg);
 }
 
+.note-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 2% auto;
+}
+
 .note-options {
   display: flex;
   justify-content: space-around;
@@ -104,6 +122,13 @@ form button {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+}
+
+.note-content {
+  width: 80%;
+  margin: 2% auto;
+  border: 1px solid black;
+  padding: 5%;
 }
 
 #add-note {
@@ -181,6 +206,7 @@ textarea[name="content"]{
 
 footer {
   position: absolute;
+  flex-grow: 1;
   text-align: center;
   width: 100%;
   height: 2rem;
